# pre-commit-run-cmd

./: .pre-commit-hooks.yaml  README.md  package.json  pyproject.toml
run_javascript/: cli.js
run_node/: cli.js
run_python/: cli.py
