[tool.poetry]
name = "pre-commit-run-cmd"
version = "0.1.0"
description = "Run any python command"
authors = ["David Danier <danier@team23.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run-python = 'run_python.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
